--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Basic application with Webpack</title>
+    <title>Webpack-react-todo</title>
     <link href="main.css">
 </head>
 
 <body>
     <h1>WebPack works !!</h1>
+    <div id="root"></div>
     <script src="../dist/main.js"></script>
 </body>
 
