--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>WebPack works !!</h1>
     <div id="root"></div>
-    <script src="../dist/index.js"></script>
+    <script src="../src/index.js"></script>
 </body>
 
 </html>
