--- a/server/index.html
+++ b/server/index.html
@@ -8,7 +8,8 @@
 
 <body>
     <h1>WebPack configuration !!</h1>
-    <div id="root"></div>
+    <div id="root"></div>    
+    <script src="../src/index.js"></script>
 </body>
 
 </html>
