--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>WebPack configuration !!</h1>
-    <div id="root"></div>
+    <div id="root" class="container"></div>
 </body>
 
 </html>
