--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="root" class="container"></div>
-    <script src="../src/ClientApp.js"></script>
+    <!-- <script src="../src/ClientApp.js"></script> -->
 </body>
 
 </html>
